# bss-cli

./: ._ARCHITECTURE.md  ._CLAUDE.md  ._DATA_MODEL.md  ._README.md  ._phases  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DATA_MODEL.md  DECISIONS.md  LICENSE  Makefile  README.md  ROADMAP.md  SHIP_CRITERIA.md  TOOL_SURFACE.md  docker-compose.e2e.yml  docker-compose.infra.yml  docker-compose.yml  pyproject.toml  seed_targeted_campaign.py
cli/: pyproject.toml
cli/bss_cli/: __init__.py  _runtime.py  jaeger.py  llm_runner.py  main.py  repl.py
cli/bss_cli/commands/: __init__.py  admin.py  admin_catalog.py  admin_knowledge.py  ask.py  case.py  catalog.py  clock.py  customer.py  external_calls.py  inventory.py  onboard.py  order.py  payment.py  promo.py  prov.py  scenario.py  som.py  subscription.py  ticket.py  trace.py  usage.py
cli/bss_cli/renderers/: __init__.py  _box.py  case.py  catalog.py  customer.py  esim.py  order.py  subscription.py  ticket.py  trace.py
cli/bss_cli/scenarios/: __init__.py  actions.py  assertions.py  context.py  file_step.py  http_step.py  llm_executor.py  reporting.py  runner.py  schema.py
cli/tests/: conftest.py  test_file_step.py  test_onboard.py  test_renderer_box.py  test_renderer_snapshots.py  test_renderer_subscription.py  test_repl_cockpit.py  test_repl_dispatch.py
cli/tests/scenarios/: test_assertions.py  test_context.py  test_http_step.py  test_runner.py  test_schema.py
cli/tests/snapshots/: catalog_list_compact.txt  catalog_show_plan_m.txt  customer_show_active.txt  customer_show_with_blocked_sub.txt  customer_show_with_open_case.txt  esim_activated_show_full.txt  esim_prepared.txt  esim_suspended.txt  order_show_completed.txt  order_show_with_stuck_task.txt  subscription_show_active.txt  subscription_show_blocked.txt
cli/tests/v0_2_0/: test_swimlane_snapshot.py
cli/tests/v0_9_0/: test_swimlane_service_identity.py
orchestrator/: pyproject.toml
orchestrator/bss_orchestrator/: __init__.py  auth_context.py  autonomy.py  chat_caps.py  clients.py  config.py  context.py  customer_chat_prompt.py  graph.py  llm.py  ownership.py  prompts.py  safety.py  session.py  types.py
orchestrator/bss_orchestrator/tools/: __init__.py  _profiles.py  _registry.py  billing.py  case.py  catalog.py  customer.py  inventory.py  knowledge.py  mine_wrappers.py  ops.py  order.py  payment.py  port_request.py  promo.py  provisioning.py  som.py  subscription.py  ticket.py  usage.py
orchestrator/tests/: test_autonomy.py  test_case_open_for_me.py  test_chat_caps.py  test_context.py  test_customer_get_compose.py  test_graph_tools.py  test_iterative_flow_scope.py  test_knowledge_tool.py  test_llm_integration.py  test_loop_bailout.py  test_messages_from_transcript.py  test_mine_pricing.py  test_operator_cockpit_profile.py  test_ownership_check.py  test_safety.py  test_session_astream.py  test_session_streaming.py  test_session_v012_chat_scoping.py  test_tool_docstring_compliance.py  test_tool_profiles.py  test_tool_surface_sync.py  test_types_coverage.py
portals/csr/: Dockerfile  pyproject.toml
portals/csr/bss_csr/: __init__.py  agent_bridge.py  agent_session.py  config.py  deps.py  main.py  prompts.py  session.py  templating.py  views.py
portals/csr/tests/: conftest.py  test_cockpit_routes.py  test_cockpit_tool_render.py  test_cross_surface_session.py  test_handoff.py  test_health.py  test_no_staff_auth.py  test_prompts.py  test_routes_ask_and_sse.py  test_routes_case.py  test_routes_crm.py  test_routes_customer.py  test_routes_search.py  test_routes_settings.py
portals/self-serve/: Dockerfile  pyproject.toml
portals/self-serve/bss_self_serve/: __init__.py  agent_bridge.py  agent_render.py  chat_session.py  clients.py  config.py  error_messages.py  main.py  offerings.py  pci_scope.py  prompts.py  qrpng.py  security.py  session.py  templating.py
portals/self-serve/tests/: conftest.py  test_agent_bridge.py  test_agent_render.py  test_auth_routes.py  test_clients_factory.py  test_dashboard.py  test_error_messages.py  test_health.py  test_kyc_adapter.py  test_kyc_didit_fixture.py  test_pci_scope.py  test_promo_portal.py  test_qrpng.py  test_routes_activation.py  test_routes_billing.py  test_routes_cancel.py  test_routes_chat.py  test_routes_confirmation.py  test_routes_esim.py  test_routes_landing.py  test_routes_legal.py  test_routes_msisdn_picker.py  test_routes_payment_methods.py  test_routes_plan_change.py  test_routes_profile.py  test_routes_signup.py  test_routes_top_up.py  test_security_step_up_catalogue.py  test_session_api.py  test_session_middleware.py  test_session_store.py  test_signup_funnel_v0_8.py  test_signup_stripe_mode.py  test_sse_stream.py  test_step_up_label_cross_check.py  test_webhooks_resend.py
services/billing/: pyproject.toml
services/catalog/: Dockerfile  pyproject.toml
services/catalog/bss_catalog/: __main__.py  app.py  config.py  deps.py  logging.py  middleware.py  policies.py  promotion_repository.py  promotion_service.py  repository.py  services.py
services/catalog/tests/: conftest.py  test_active_queries.py  test_active_routes.py  test_admin_offering_roaming.py  test_api_token.py  test_catalog_api.py  test_catalog_repository.py  test_promotion_routes.py  test_promotion_service.py
services/crm/: Dockerfile  pyproject.toml
services/crm/app/: __main__.py  auth_context.py  config.py  dependencies.py  main.py  middleware.py
services/crm/tests/: conftest.py  test_agent_api.py  test_api_token.py  test_case_ticket_api.py  test_chat_transcript_api.py  test_customer_api.py  test_health.py  test_inventory_api.py  test_kyc_corroboration_policy.py  test_kyc_redaction.py  test_port_request_state_and_policies.py  test_state_machines.py
services/payment/: Dockerfile  pyproject.toml
services/payment/app/: __main__.py  config.py  dependencies.py  main.py  middleware.py
services/payment/tests/: conftest.py  test_api_token.py  test_auth_context.py  test_cutover.py  test_id_sequences.py  test_mock_tokenizer.py  test_payment_api.py  (+7 more)
services/provisioning-sim/: Dockerfile  pyproject.toml
(+460 files in other folders)
