[project]
name = "bss-cli"
version = "0.1.0"
requires-python = ">=3.12"
description = "Lightweight, SID-aligned, TMF-compliant BSS for terminal-first operation"
license = "Apache-2.0"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.uv.workspace]
members = ["packages/*", "services/*"]
exclude = ["services/_template"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
