[project]
name = "bss-cli"
version = "0.1.0"
requires-python = ">=3.12"
description = "BSS-CLI command-line interface — direct verbs + LLM REPL"
dependencies = [
    "bss-clients",
    "bss-clock",
    "bss-cockpit",
    "bss-orchestrator",
    "bss-telemetry",
    "bss-middleware",
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "qrcode>=7.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "httpx>=0.27",
]

[project.scripts]
bss = "bss_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "syrupy>=4.6",
]

[tool.uv.sources]
bss-clients = { workspace = true }
bss-clock = { workspace = true }
bss-cockpit = { workspace = true }
bss-orchestrator = { workspace = true }
bss-telemetry = { workspace = true }
bss-middleware = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bss_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring real downstream containers",
]
