[project]
name = "bss-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
description = "LangGraph supervisor + tool registry for the BSS-CLI LLM-native interface"
dependencies = [
    "bss-clients",
    "bss-clock",
    "bss-telemetry",
    "bss-middleware",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.40",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.uv.sources]
bss-clients = { workspace = true }
bss-clock = { workspace = true }
bss-telemetry = { workspace = true }
bss-middleware = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bss_orchestrator"]
