[project]
name = "portal-csr"
version = "0.1.0"
requires-python = ">=3.12"
description = "BSS-CLI CSR (customer service rep) console — find a customer, open the 360 view, ask the LLM agent. Every write routes through the orchestrator via agent_bridge."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.4",
    "pydantic-settings>=2.0",
    "bss-clients",
    "bss-cockpit",
    "bss-orchestrator",
    "bss-telemetry",
    "bss-middleware",
    "bss-portal-ui",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bss_csr"]

[tool.hatch.build.targets.wheel.force-include]
"bss_csr/static" = "bss_csr/static"
"bss_csr/templates" = "bss_csr/templates"

[tool.uv.sources]
bss-clients = { workspace = true }
bss-cockpit = { workspace = true }
bss-orchestrator = { workspace = true }
bss-telemetry = { workspace = true }
bss-middleware = { workspace = true }
bss-portal-ui = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
