[project]
name = "portal-self-serve"
version = "0.1.0"
requires-python = ">=3.12"
description = "BSS-CLI self-serve customer portal — browse plans, sign up, activate. Every write routes through the LLM orchestrator via agent_bridge."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "qrcode>=7.4",
    "pillow>=10.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "pydantic-settings>=2.0",
    "bss-clients",
    "bss-orchestrator",
    "bss-telemetry",
    "bss-middleware",
    "bss-portal-ui",
    "bss-portal-auth",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bss_self_serve"]

[tool.hatch.build.targets.wheel.force-include]
"bss_self_serve/static" = "bss_self_serve/static"

[tool.uv.sources]
bss-clients = { workspace = true }
bss-orchestrator = { workspace = true }
bss-telemetry = { workspace = true }
bss-middleware = { workspace = true }
bss-portal-ui = { workspace = true }
bss-portal-auth = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
